# R-EMS

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
ISSUE_TEMPLATE/: bug_report.md  feature_request.md
compose/: docker-compose.yml
compose/profiles/: profile.core.yml  profile.dev.yml  profile.ha.yml
configs/: README.md  chaos.dev.toml  docker.default.toml  example.dev.toml  example.prod.toml  grid-sim.toml  license.dev.lic  messaging.dev.toml  rpi_sim.toml  security.dev.toml  security.prod.toml  system.yaml  update_feed.json
configs/deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml
configs/docker/: docker-compose.dev.yml  docker-compose.runtime.yml
configs/licenses/: mock-dev.lic
configs/scenarios/: dev_sine.csv  dev_sine.json  docker_sine.json  rpi_startup.json
crates/r-ems-api/: Cargo.toml
crates/r-ems-api/src/: lib.rs
crates/r-ems-calc-engine/: Cargo.toml
crates/r-ems-calc-engine/src/: api.rs  cable_check.rs  errors.rs  io.rs  lib.rs  load_flow.rs  model.rs  reports.rs  short_circuit.rs  telemetry.rs
crates/r-ems-calc-engine/tests/: calc_engine.rs
crates/r-ems-common/: Cargo.toml  build.rs
crates/r-ems-common/src/: config.rs  lib.rs  license.rs  logging.rs  metrics.rs  time.rs  version.rs
crates/r-ems-common/tests/: license_tests.rs
crates/r-ems-config/: Cargo.toml
crates/r-ems-config/src/: lib.rs
crates/r-ems-core/: Cargo.toml
crates/r-ems-core/src/: integration_persistence.rs  lib.rs  orchestrator.rs  state.rs  update.rs
crates/r-ems-core/tests/: orchestrator_tests.rs  update_tests.rs
crates/r-ems-grid-builder/: Cargo.toml
crates/r-ems-grid-builder/src/: component.rs  gui.rs  icon_loader.rs  lib.rs
crates/r-ems-licensing/: Cargo.toml
crates/r-ems-licensing/src/: certificates.rs  core.rs  features.rs  lib.rs  logging.rs
crates/r-ems-logging/: Cargo.toml
crates/r-ems-logging/src/: lib.rs  macros.rs
crates/r-ems-messaging/: Cargo.toml
crates/r-ems-messaging/src/: lib.rs
crates/r-ems-metrics/: Cargo.toml
crates/r-ems-metrics/src/: lib.rs
crates/r-ems-msg/: Cargo.toml
crates/r-ems-msg/examples/: messaging_two_nodes.rs
crates/r-ems-msg/src/: lib.rs  logging.rs  qos.rs  sim_hooks.rs  supervisor.rs  transport.rs  types.rs
crates/r-ems-msg/tests/: messaging_integration.rs
crates/r-ems-net/: Cargo.toml  build.rs
crates/r-ems-net/proto/: ems.proto
crates/r-ems-net/src/: grpc.rs  lib.rs  rest.rs  websocket.rs
crates/r-ems-net/src/adapters/: iec104.rs  mod.rs  modbus.rs  opcua.rs
crates/r-ems-orchestrator/: Cargo.toml
crates/r-ems-orchestrator/src/: lib.rs
crates/r-ems-persistence/: Cargo.toml
crates/r-ems-persistence/src/: event_log.rs  lib.rs  metrics.rs  snapshot.rs  supervisor.rs
crates/r-ems-persistence/tests/: persistence_integration.rs
crates/r-ems-redundancy/: Cargo.toml
crates/r-ems-redundancy/src/: controller.rs  lib.rs  supervisor.rs
crates/r-ems-redundancy/tests/: supervisor_tests.rs
crates/r-ems-replay/: Cargo.toml
crates/r-ems-replay/src/: lib.rs
crates/r-ems-resilience/: Cargo.toml
crates/r-ems-resilience/src/: chaos.rs  degradation.rs  failover.rs  lib.rs  metrics.rs  self_healing.rs
crates/r-ems-resilience/tests/: resilience_integration.rs
crates/r-ems-rt/: Cargo.toml
crates/r-ems-rt/src/: lib.rs  scheduling.rs
crates/r-ems-schema/: Cargo.toml
crates/r-ems-schema/src/: lib.rs
crates/r-ems-security/: Cargo.toml
crates/r-ems-security/src/: audit.rs  certificates.rs  compliance.rs  crypto.rs  identity.rs  lib.rs  metrics.rs  rbac.rs
crates/r-ems-sim/: Cargo.toml
crates/r-ems-sim/src/: frames.rs  generator.rs  lib.rs  replay.rs  visual.rs
crates/r-ems-simgen/: Cargo.toml
crates/r-ems-simgen/src/: main.rs
crates/r-ems-testharness/: Cargo.toml
crates/r-ems-testharness/src/: lib.rs
crates/r-ems-transport/: Cargo.toml
crates/r-ems-transport/src/: lib.rs
crates/r-ems-versioning/: Cargo.toml
crates/r-ems-versioning/src/: lib.rs  semver.rs  update.rs
docs/: ARCHITECTURE.md  CONTRIBUTOR.md  DEVELOPER_GUIDE.md  FRONTMATTER-GUIDE.md  HA.md  INSTALL.md  LICENSING.md  OBSERVABILITY.md  OPERATIONS.md  PLUGIN_SDK.md  README.md  SIMULATION.md  Supervisor.md  TEST-HARNESS.md  TROUBLESHOOTING.md  VERSIONING.md
docs/roadmap/: VERSIONING.md
docs/sections/: 01-core-functionality.md  02-messaging-ipc-data-model.md  03-persistence-logging.md  04-configuration-orchestration.md  05-networking-external-interfaces.md  06-security-access-control.md  07-resilience-fault-tolerance.md  08-energy-models-optimization.md  09-integration-interoperability.md  10-deployment-ci-cd-enhancements.md  11-simulation-test-harness.md  12-gui-setup-wizard.md  13-documentation-contributor-guides.md  14-versioning-licensing-system.md  15-testing-qa-runbook.md
examples/: eventlog_replay.rs  license_check.rs  resilience_chaos_demo.rs  security_api.rs  snapshot_roundtrip.rs
examples/configs/: ha_example.toml  minimal.toml  system.yaml
examples/plugins.d/: pandapower.toml  pypsa.toml
scripts/: common.sh  docker-entrypoint.sh  docker-install.ps1  docker-install.sh  install.sh  node_health_check.sh  run_core_stack.sh  setup-old.sh  setup.sh  setup_config.sh  setup_web.sh  uninstall.sh  wizard_ha.sh  wizard_install.sh
scripts/docker/: prepare-workspace.sh
services/bus/: Cargo.toml  Dockerfile  README.md
services/bus/src/: main.rs
services/configd/: Cargo.toml  Dockerfile  README.md
services/configd/src/: config.rs  main.rs
services/gui/: Cargo.toml  Dockerfile  README.md
services/gui/src/: main.rs
services/gui/src/templates/: base.html  config.html  ha.html  help_file.html  help_index.html  overview.html  plugins.html
services/logger/: Cargo.toml  Dockerfile  README.md
services/registry/: Cargo.toml  Dockerfile  README.md
services/schemas/: Cargo.toml  README.md  build.rs
services/supervisor/: Cargo.toml  (+2 more)
tests/: Cargo.toml  deployment_integration.rs  grid_builder_icons.rs  security_integration.rs  versioning_integration.rs
wiki/: README_GUI.md
workflows/: sync-wiki.yml
(+29 files in other folders)
