# ---
# ems_section: "00-meta"
# ems_subsection: "workspace"
# ems_type: "config"
# ems_scope: "build"
# ems_description: "Workspace manifest for the R-EMS project."
# ems_version: "v0.0.0-prealpha"
# ems_owner: "tbd"
# ---

[workspace]
members = [
    "crates/r-ems-common",
    "crates/r-ems-licensing",
    "crates/r-ems-config",
    "crates/r-ems-grid-builder",
    "crates/r-ems-msg",
    "crates/r-ems-logging",
    "crates/r-ems-metrics",
    "crates/r-ems-api",
    "crates/r-ems-core",
    "crates/r-ems-orchestrator",
    "crates/r-ems-net",
    "crates/r-ems-versioning",
    "crates/r-ems-security",
    "crates/r-ems-redundancy",
    "crates/r-ems-resilience",
    "crates/r-ems-sim",
    "crates/r-ems-simgen",
    "crates/r-ems-testharness",
    "crates/r-ems-rt",
    "crates/r-ems-messaging",
    "crates/r-ems-schema",
    "crates/r-ems-transport",
    "crates/r-ems-replay",
    "crates/r-ems-persistence",
    "crates/r-ems-calc-engine",
    "bin/r-emsd",
    "bin/r-emsctl",
    "bin/r-ems-ui",
    "tests"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["R-EMS Engineering <ems@company.invalid>"]
license = "Apache-2.0"
repository = "https://github.com/kentthoresen/R-EMS"
homepage = "https://github.com/kentthoresen/R-EMS"
documentation = "https://github.com/kentthoresen/R-EMS"
description = "Redundant Energy Management System orchestrator workspace."
rust-version = "1.82"
readme = "README.md"

[workspace.metadata.renra]
ci_minimum_rust_version = "1.82"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
axum = { version = "0.7", default-features = false, features = ["http1", "json", "macros", "tokio", "ws"] }
toml = "0.8"
config = "0.14"
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "registry", "json", "time"] }
tracing-appender = "0.2"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time", "sync", "signal", "fs"] }
async-trait = "0.1"
futures = "0.3"
once_cell = "1.19"
parking_lot = "0.12"
rand = "0.8"
rand_distr = "0.4"
statrs = "0.16"
chrono = { version = "0.4", features = ["clock", "serde"] }
bytes = "1.6"
serde_with = { version = "3.6", features = ["chrono"] }
strum = { version = "0.26", features = ["derive"] }
indexmap = { version = "2.2", features = ["serde"] }
hex = "0.4"
hmac = "0.12"
prometheus = "0.13"
sha2 = "0.10"
base64 = "0.22"
path-absolutize = "3.1"
walkdir = "2.5"
notify = { version = "6.1", default-features = false, features = ["windows-kqueue"] }
vergen = { version = "8.3.2", default-features = false, features = ["build", "cargo", "git", "gitcl"] }
octocrab = { version = "0.32", default-features = false, features = ["rustls"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
url = "2.5"
serde_path_to_error = "0.1"
validator = "0.18"
semver = "1.0"
csv = "1.3"
ratatui = { version = "0.27", default-features = false, features = ["crossterm"] }
crossterm = "0.27"
tower-http = { version = "0.5", features = ["fs", "trace"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
petgraph = { version = "0.6", features = ["serde-1"] }
tempfile = "3"
tonic = { version = "0.11", default-features = false, features = ["transport"] }
tonic-build = "0.11"
prost = "0.12"
prost-types = "0.12"
ed25519-dalek = { version = "2.1", default-features = false, features = ["std"] }

[patch.crates-io]
base64ct = { path = "vendor/base64ct" }

[profile.dev]
incremental = true
opt-level = 1

[profile.release]
opt-level = "z"
panic = "abort"
codegen-units = 1
lto = true
