# ---
# ems_section: "15-testing-qa-runbook"
# ems_subsection: "manifest"
# ems_type: "config"
# ems_scope: "build"
# ems_description: "Cargo manifest for integration test suites."
# ems_version: "v0.0.0-prealpha"
# ems_owner: "tbd"
# ---
[package]
name = "r-ems-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]

[[test]]
name = "deployment_integration"
path = "deployment_integration.rs"
