# ---
# ems_section: "05-networking-external-interfaces"
# ems_subsection: "manifest"
# ems_type: "config"
# ems_scope: "build"
# ems_description: "Cargo manifest for the external API crate."
# ems_version: "v0.0.0-prealpha"
# ems_owner: "tbd"
# ---
[package]
name = "r-ems-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "REST API and static asset server for the R-EMS setup wizard"

[dependencies]
anyhow.workspace = true
axum.workspace = true
parking_lot.workspace = true
r-ems-common = { path = "../r-ems-common" }
r-ems-sim = { path = "../r-ems-sim" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tower-http.workspace = true
uuid.workspace = true
chrono.workspace = true
toml.workspace = true
