# ---
# ems_section: "08-energy-models-optimization"
# ems_subsection: "manifest"
# ems_type: "config"
# ems_scope: "build"
# ems_description: "Cargo manifest for the optimisation engine crate."
# ems_version: "v0.0.0-prealpha"
# ems_owner: "tbd"
# ---
[package]
name = "r-ems-calc-engine"
version = "0.1.0"
edition = "2021"
description = "Calculation engine for R-EMS providing short-circuit, load flow, and cable sizing analyses."
authors = ["R-EMS Engineering <ems@company.invalid>"]
license = "Apache-2.0"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
nalgebra = "0.29"
petgraph = "0.6"
thiserror = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true, optional = true }
uuid = { workspace = true }
chrono = { workspace = true }

[features]
default = []
rest-api = ["axum"]

[dev-dependencies]
tempfile = { workspace = true }