# ---
# ems_section: "01-core-functionality"
# ems_subsection: "manifest"
# ems_type: "config"
# ems_scope: "build"
# ems_description: "Cargo manifest for shared runtime primitives."
# ems_version: "v0.0.0-prealpha"
# ems_owner: "tbd"
# ---
[package]
name = "r-ems-common"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Common utilities, configuration handling, licensing, and version metadata for R-EMS."
readme = "../../README.md"

[lib]
name = "r_ems_common"
path = "src/lib.rs"

[features]
default = ["telemetry"]
telemetry = []

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
config.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
chrono.workspace = true
clap.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
indexmap.workspace = true
serde_with.workspace = true
validator.workspace = true
r-ems-versioning = { path = "../r-ems-versioning" }
r-ems-licensing = { path = "../r-ems-licensing" }
path-absolutize.workspace = true
walkdir.workspace = true

[dev-dependencies]
serde_json.workspace = true
serde_yaml.workspace = true

[build-dependencies]
vergen.workspace = true