# ---
# ems_section: "04-configuration-orchestration"
# ems_subsection: "manifest"
# ems_type: "config"
# ems_scope: "build"
# ems_description: "Cargo manifest for configuration orchestration tooling."
# ems_version: "v0.0.0-prealpha"
# ems_owner: "tbd"
# ---
[package]
name = "r-ems-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Configuration management helpers for R-EMS installations, including persistence and hashing."

[dependencies]
anyhow.workspace = true
chrono.workspace = true
indexmap.workspace = true
r-ems-common = { path = "../r-ems-common" }
serde.workspace = true
sha2.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3"