# ---
# ems_section: "01-core-functionality"
# ems_subsection: "manifest"
# ems_type: "config"
# ems_scope: "build"
# ems_description: "Cargo manifest for the core orchestrator crate."
# ems_version: "v0.0.0-prealpha"
# ems_owner: "tbd"
# ---
[package]
name = "r-ems-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core runtime orchestrator for the R-EMS system, including grid scheduling, health monitoring, and updates."
readme = "../../README.md"

[lib]
name = "r_ems_core"
path = "src/lib.rs"

[features]
default = ["update", "snapshot", "simulation"]
update = []
snapshot = []
simulation = ["r-ems-sim"]

[dependencies]
r-ems-common = { path = "../r-ems-common" }
prometheus.workspace = true
r-ems-metrics = { path = "../r-ems-metrics" }
r-ems-redundancy = { path = "../r-ems-redundancy" }
r-ems-sim = { path = "../r-ems-sim", optional = true }
r-ems-rt = { path = "../r-ems-rt" }
r-ems-persistence = { path = "../r-ems-persistence" }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-futures.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
serde_with.workspace = true
clap.workspace = true
tokio.workspace = true
futures.workspace = true
rand.workspace = true
rand_distr.workspace = true
chrono.workspace = true
parking_lot.workspace = true
indexmap.workspace = true
bytes.workspace = true
base64.workspace = true
hex.workspace = true
hmac.workspace = true
sha2.workspace = true
walkdir.workspace = true
semver.workspace = true
url.workspace = true
reqwest.workspace = true
octocrab.workspace = true

[dev-dependencies]
serde_json.workspace = true
rand.workspace = true
tempfile = "3"
uuid.workspace = true
