# ---
# ems_section: "09-integration-interoperability"
# ems_subsection: "manifest"
# ems_type: "config"
# ems_scope: "build"
# ems_description: "Cargo manifest for grid builder integrations."
# ems_version: "v0.0.0-prealpha"
# ems_owner: "tbd"
# ---
[package]
name = "r-ems-grid-builder"
version = "0.1.0"
edition = "2021"
description = "Visual grid builder components and icon rendering."
license = "Apache-2.0"
authors = ["R-EMS Engineering <ems@company.invalid>"]

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
egui = "0.27"
egui_extras = { version = "0.27", features = ["image"] }

[dev-dependencies]
once_cell = "1.19"