# ---
# ems_section: "02-messaging-ipc-data-model"
# ems_subsection: "manifest"
# ems_type: "config"
# ems_scope: "build"
# ems_description: "Cargo manifest for messaging coordination crate."
# ems_version: "v0.0.0-prealpha"
# ems_owner: "tbd"
# ---
[package]
name = "r-ems-messaging"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
r-ems-schema = { path = "../r-ems-schema" }

[dev-dependencies]
serde_json = { workspace = true }