# ---
# ems_section: "02-messaging-ipc-data-model"
# ems_subsection: "manifest"
# ems_type: "config"
# ems_scope: "build"
# ems_description: "Cargo manifest for message schema helpers."
# ems_version: "v0.0.0-prealpha"
# ems_owner: "tbd"
# ---
[package]
name = "r-ems-msg"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Messaging and IPC primitives for the R-EMS workspace."
publish = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_cbor = "0.11"
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
prometheus = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
insta = { version = "1", features = ["yaml"] }
tempfile = "3"