# ---
# ems_section: "05-networking-external-interfaces"
# ems_subsection: "manifest"
# ems_type: "config"
# ems_scope: "build"
# ems_description: "Cargo manifest for network edge adapters."
# ems_version: "v0.0.0-prealpha"
# ems_owner: "tbd"
# ---
[package]
name = "r-ems-net"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Networking and external integration surfaces for the R-EMS platform."
publish = false

[dependencies]
axum = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
prometheus = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tonic = { workspace = true, features = ["transport", "codegen", "prost"] }
prost = { workspace = true }
prost-types = { workspace = true }
futures-util = "0.3"

[dev-dependencies]
reqwest = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
serde_json = { workspace = true }
tonic = { workspace = true, features = ["transport", "codegen", "prost"] }
prost-types = { workspace = true }
tokio-tungstenite = { version = "0.21", default-features = false, features = ["rustls-tls-native-roots", "connect"] }
futures-util = "0.3"

[build-dependencies]
tonic-build = { workspace = true }
protoc-bin-vendored = "3.1"