# ---
# ems_section: "04-configuration-orchestration"
# ems_subsection: "manifest"
# ems_type: "config"
# ems_scope: "build"
# ems_description: "Cargo manifest for orchestration drivers."
# ems_version: "v0.0.0-prealpha"
# ems_owner: "tbd"
# ---
[package]
name = "r-ems-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Orchestration primitives coordinating grids, controllers, and policies for R-EMS."
publish = false

[dependencies]
parking_lot.workspace = true
r-ems-common = { path = "../r-ems-common" }
r-ems-redundancy = { path = "../r-ems-redundancy" }
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing.workspace = true

[dev-dependencies]
futures.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
