# ---
# ems_section: "03-persistence-logging"
# ems_subsection: "manifest"
# ems_type: "config"
# ems_scope: "build"
# ems_description: "Cargo manifest for persistence bindings."
# ems_version: "v0.0.0-prealpha"
# ems_owner: "tbd"
# ---
[package]
name = "r-ems-persistence"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Persistence utilities for snapshots, event logs, and recovery in R-EMS."
publish = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_cbor = "0.11"
thiserror = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
prometheus = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tempfile = "3"