# ---
# ems_section: "07-resilience-fault-tolerance"
# ems_subsection: "manifest"
# ems_type: "config"
# ems_scope: "build"
# ems_description: "Cargo manifest for redundancy planning crate."
# ems_version: "v0.0.0-prealpha"
# ems_owner: "tbd"
# ---
[package]
name = "r-ems-redundancy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Redundancy supervisor for R-EMS controllers, providing failover, heartbeats, and state replication."
readme = "../../README.md"

[lib]
name = "r_ems_redundancy"
path = "src/lib.rs"

[features]
default = []

[dependencies]
r-ems-common = { path = "../r-ems-common" }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
parking_lot.workspace = true
tokio.workspace = true
rand.workspace = true
chrono.workspace = true
indexmap.workspace = true
bytes.workspace = true

[dev-dependencies]
rand.workspace = true
serde_json.workspace = true