# ---
# ems_section: "11-simulation-test-harness"
# ems_subsection: "manifest"
# ems_type: "config"
# ems_scope: "build"
# ems_description: "Cargo manifest for replay tooling crate."
# ems_version: "v0.0.0-prealpha"
# ems_owner: "tbd"
# ---
[package]
name = "r-ems-replay"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
r-ems-messaging = { path = "../r-ems-messaging" }
