# ---
# ems_section: "11-simulation"
# ems_subsection: "01-bootstrap"
# ems_type: "config"
# ems_scope: "build"
# ems_description: "Cargo manifest for the Simulation engine crate."
# ems_version: "v0.1.0"
# ems_owner: "tbd"
# ---
# Refer to /docs/VERSIONING.md for workspace release coordination details.
[package]
name = "r-ems-sim"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Simulation engines and telemetry generators for R-EMS."
readme = "../../README.md"

[lib]
name = "r_ems_sim"
path = "src/lib.rs"

[features]
default = []

[dependencies]
r-ems-common = { path = "../r-ems-common" }
r-ems-messaging = { path = "../r-ems-messaging" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
tracing.workspace = true
tokio.workspace = true
rand.workspace = true
rand_distr.workspace = true
statrs.workspace = true
indexmap.workspace = true
chrono.workspace = true
csv.workspace = true
petgraph.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
rand.workspace = true
tempfile.workspace = true
