# ---
# ems_section: "11-simulation"
# ems_subsection: "01-bootstrap"
# ems_type: "config"
# ems_scope: "build"
# ems_description: "Cargo manifest for the Simulation generator CLI crate."
# ems_version: "v0.1.0"
# ems_owner: "tbd"
# ---
# Refer to /docs/VERSIONING.md for workspace release coordination details.
[package]
name = "r-ems-simgen"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CLI utility for generating R-EMS simulation scenarios in CSV or JSON"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
r-ems-common = { path = "../r-ems-common" }
r-ems-sim = { path = "../r-ems-sim" }
serde.workspace = true
serde_json.workspace = true
csv.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
