# ---
# ems_section: "14-versioning-licensing-system"
# ems_subsection: "manifest"
# ems_type: "config"
# ems_scope: "build"
# ems_description: "Cargo manifest for versioning governance crate."
# ems_version: "v0.0.0-prealpha"
# ems_owner: "tbd"
# ---
[package]
name = "r-ems-versioning"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Versioning utilities for the R-EMS workspace."
publish = false

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
octocrab.workspace = true
reqwest.workspace = true
tracing.workspace = true
tokio.workspace = true
thiserror.workspace = true
base64.workspace = true
sha2.workspace = true
serde_with.workspace = true
uuid.workspace = true
prometheus.workspace = true
once_cell.workspace = true
ed25519-dalek.workspace = true