# Config daemon manifest providing dependencies for file watching and HTTP API.
[package]
name = "r-ems-configd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
axum.workspace = true
notify.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "r-ems-configd"
path = "src/main.rs"
